# stutgard_task

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
api/: celery.py  models.py  pars.py  serializers.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py
stutgard/: asgi.py  settings.py  urls.py  wsgi.py
